Thu Dec 19 10:50:13 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_of): don't need to RBASIC_SET_CLASS() which includes WB
	  here because created obj is always YOUNG/INFANT.

Thu Dec 19 10:48:37 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: check GC::OPTS availability
	  for not MRI 2.1.0.

Thu Dec 19 03:10:30 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (heap_get_freeobj): remove redundant assignment. heap->freelist
	  is set after the while() loop already.

Thu Dec 19 01:54:30 2013  Koichi Sasada  <ko1@atdot.net>

	* test/runner.rb: fix commit miss on r44278.

Thu Dec 19 00:26:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): lazy_sweep setting should work
	  without USE_RGENGC.

Wed Dec 18 23:31:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_dump_major_reason): fix this function because major_reason
	  can be OR of multiple reasons.

	* gc.c (gc_profile_dump_on): ditto.

Wed Dec 18 17:03:00 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_record_get): should return an empty array
	  when profiling is active.

Wed Dec 18 16:49:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_clear, gc_profile_enable): remove rest_sweep().

	* gc.c: check objspace->profile.current_record before inserting
	  profiling record by new macro gc_prof_enabled().

Wed Dec 18 14:32:06 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_exec.h (VM_DEBUG_STACKOVERFLOW): added.
	  disable stack overflow check for every stack pushing as default.

	* vm_exec.c (vm_stack_overflow_for_insn): ditto.

Wed Dec 18 10:00:22 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master d8f12e2.  This increases the
	  speed of `gem install --ignore-dependencies` which helps bundler
	  tests.
	* test/rubygems:  ditto.

Wed Dec 18 09:00:17 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb (test_expand_heap): allow +/-1 diff.

Tue Dec 17 23:44:15 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
