@@ -1,3 +1,9 @@
+Thu Dec 19 11:23:49 2013  Aman Gupta <ruby@tmm1.net>
+
+	* vm_insnhelper.c (vm_call_iseq_setup_normal): simple for loop
+	  condition optimization. this area shows up as a hotspot in VM
+	  profiles.
+
 Thu Dec 19 10:50:13 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (newobj_of): don't need to RBASIC_SET_CLASS() which includes WB
